<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <POU Name="CM_DO" Id="{b2363562-5ff2-438c-9c32-9788f90e68b9}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK CM_DO
VAR_INPUT
	PI_Enable : BOOL;
END_VAR
VAR_OUTPUT
	PO_HighCommand : BOOL;
	PO_LowCommand : BOOL;
END_VAR
VAR_IN_OUT
	Control_data_DO : CM_DO_UDT;
END_VAR
]]></Declaration>
    <Implementation>
      <NWL>
        <XmlArchive>
          <Data>
            <o xml:space="preserve" t="NWLImplementationObject">
              <v n="NetworkListComment">""</v>
              <v n="DefaultViewMode">"Ld"</v>
              <l2 n="NetworkList" cet="Network">
                <o>
                  <v n="ILActive">false</v>
                  <v n="FBDValid">false</v>
                  <v n="ILValid">false</v>
                  <l2 n="ILLines" />
                  <v n="Comment">""</v>
                  <v n="Title">""</v>
                  <v n="Label">""</v>
                  <v n="OutCommented">false</v>
                  <l2 n="NetworkItems" cet="BoxTreeAssign">
                    <o>
                      <o n="OutputItems" t="OutputItemList">
                        <l2 n="OutputItems" cet="Operand">
                          <o>
                            <v n="Operand">"PO_HighCommand"</v>
                            <v n="Type">"BOOL"</v>
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <v n="LValue">true</v>
                            <v n="Boolean">true</v>
                            <v n="IsInstance">false</v>
                            <v n="Id">23L</v>
                          </o>
                        </l2>
                      </o>
                      <o n="Flags" t="Flags">
                        <v n="Flags">0</v>
                        <v n="Fixed">false</v>
                        <v n="Extensible">false</v>
                      </o>
                      <o n="RValue" t="BoxTreeOperand">
                        <o n="Operand" t="Operand">
                          <v n="Operand">"Control_data_DO.PO_HighCommand"</v>
                          <v n="Type">"BOOL"</v>
                          <v n="Comment">""</v>
                          <v n="SymbolComment">""</v>
                          <v n="Address">""</v>
                          <o n="Flags" t="Flags">
                            <v n="Flags">0</v>
                            <v n="Fixed">true</v>
                            <v n="Extensible">false</v>
                          </o>
                          <v n="LValue">false</v>
                          <v n="Boolean">true</v>
                          <v n="IsInstance">false</v>
                          <v n="Id">22L</v>
                        </o>
                        <v n="Id">21L</v>
                      </o>
                      <v n="Id">24L</v>
                    </o>
                  </l2>
                  <l2 n="Connectors" />
                  <v n="Id">9L</v>
                </o>
              </l2>
              <v n="BranchCounter">0</v>
              <v n="ValidIds">true</v>
            </o>
          </Data>
          <TypeList>
            <Type n="Boolean">System.Boolean</Type>
            <Type n="BoxTreeAssign">{9873c309-1f09-4ebf-9078-42d8057ef11b}</Type>
            <Type n="BoxTreeOperand">{9de7f100-1b87-424c-a62e-45b0cfc85ed2}</Type>
            <Type n="Flags">{668066f2-6069-46b3-8962-8db8d13d7db2}</Type>
            <Type n="Int32">System.Int32</Type>
            <Type n="Int64">System.Int64</Type>
            <Type n="Network">{d9a99d73-b633-47db-b876-a752acb25871}</Type>
            <Type n="NWLImplementationObject">{25e509de-33d4-4447-93f8-c9e4ea381c8b}</Type>
            <Type n="Operand">{c9b2f165-48a2-4a45-8326-3952d8a3d708}</Type>
            <Type n="OutputItemList">{f40d3e09-c02c-4522-a88c-dac23558cfc4}</Type>
            <Type n="String">System.String</Type>
          </TypeList>
        </XmlArchive>
      </NWL>
    </Implementation>
  </POU>
</TcPlcObject>